--- a/public/css/app.css
+++ b/public/css/app.css
@@ -57,6 +57,14 @@ header .container nav ul li a span.active {
   border-bottom: 5px solid #0C7CEC;
 }
 
+.jumbotron {
+  background-image: url("../images/jumbotron.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 300px;
+}
+
 footer .f-top {
   height: 300px;
   width: 100%;
