--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,4 +3,5 @@
 @import 'partials/generals';
 @import 'partials/header';
 @import 'partials/jumbotron';
+@import 'partials/comics';
 @import 'partials/footer';
