--- a/public/css/app.css
+++ b/public/css/app.css
@@ -65,6 +65,34 @@ header .container nav ul li a span.active {
   height: 300px;
 }
 
+main {
+  width: 100%;
+  background-color: black;
+  color: white;
+}
+main .boxes {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-top: 50px;
+}
+main .container.text {
+  position: relative;
+}
+main .container.text .current-series {
+  position: absolute;
+  top: -25px;
+  left: 0;
+  width: 200px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-weight: bolder;
+  background-color: blue;
+}
+
 footer .f-top {
   height: 300px;
   width: 100%;
