--- a/resources/sass/partials/_comics.scss
+++ b/resources/sass/partials/_comics.scss
@@ -7,6 +7,21 @@ main{
     justify-content: center;
     flex-wrap: wrap;
     padding-top: 50px;
+    .card{
+      width: 150px;
+      height: 150px;
+      margin: 5px;
+      overflow: hidden;
+      img{
+        width: 100%;
+      }
+    }
+    .desc{
+      width: 150px;
+      font-weight: bolder;
+      text-transform: uppercase;
+      margin-left: 5px;
+    }
   }
   .container.text{ 
     position: relative;
