--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
 //
-
+@import url(https://fonts.googleapis.com/css2?family=Cairo:wght@200;600&display=swap);
 @import 'partials/generals';
 @import 'partials/header';
 @import 'partials/jumbotron';
